# resources/API.yml
@@ -39,7 +39,7 @@ paths:
               schema:
                 type: string
   # Auth
-  '/auth/forgot/{usermame}':
+  '/auth/forgot/{username}':
     post:
       tags:
       - auth
@@ -158,7 +158,7 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '404':
           $ref: '#/components/responses/NotFound'
-  '/entries/{entryId}/sign':
+  '/entries/{entryId}/signed':
     put:
       tags:
         - entries
@@ -172,6 +172,17 @@ paths:
           description: MongoId of the entry to sign
           schema:
             type: string
+      requestBody:
+        description: Value to set to
+        required: false
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                value:
+                  type: boolean
+                  description: Value to set the signature to
       responses:
         '200':
           description: OK
